--- a/fruta.html
+++ b/fruta.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Usuario</title>
+    <title>Fruta</title>
     <script
       src="https://www.gstatic.com/firebasejs/7.24.0/firebase-app.js"></script>
     <script
@@ -22,8 +22,8 @@
     <form id="forma">
       <mi-nav id="miNav"></mi-nav>
       <header>
-        <a href="usuarios.html">Cancelar</a>
-        <h1><output name="cue">Usuario <mi-progreso></mi-progreso></output></h1>
+        <a href="fruta.html">Cancelar</a>
+        <h1><output name="cue">Fruta <mi-progreso></mi-progreso></output></h1>
         <button type="submit">Guardar</button>
         <button id="eliminar" type="button">Eliminar</button>
       </header>
@@ -37,8 +37,8 @@
       <!-- Maneja una asociación a uno. -->
       <p>
         <label>
-          Pasatiempo
-          <select name="pasatiempo">
+          Descripcion
+          <select name="descripcion">
             <option>Cargando…</option>
           </select>
         </label>
@@ -63,7 +63,7 @@
       import { muestraSesión, muestraUsuarios } from "./js/navegacion.js";
 
       const ctrlSesión = Fábrica.instancia.ctrlSesión;
-      const ctrlUsuarios = Fábrica.instancia.ctrlUsuarios;
+      const ctrlFruta = Fábrica.instancia.ctrlUsuarios;
       const foráneas = Fábrica.instancia.foráneasDeUsuarios;
 
       const params = new URL(location.href).searchParams;
